<resources>
    <string name="app_name">MPicture</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_featured">Featured</string>
    <string name="menu_contribute">Contribute</string>
    <string name="menu_donate">Donate</string>
    <string name="menu_feedback">Feed Back</string>
    <string name="menu_information">Infomation</string>
    <string name="next"><b>Next</b></string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_donate">Donate</string>
    <string name="title_activity_contribute">Contribute</string>
    <string name="title_activity_information">Information</string>
    <string name="title_activity_feedback">Donate</string>
    <string name="title_activity_login">Sign in</string>

    <string name="about_overview"><b>Overview</b></string>
    <string name="about_open_source"><b>Open source software used in MPicture</b></string>
    <string name="about_permission"><b>Permissions</b></string>
    <string name="about_contact"><b>Contact us</b></string>
    <string name="permission1"><b>Access Network State</b></string>
    <string name="permission2"><b>Internet</b></string>
    <string name="permission3"><b>Set Wallpaper</b></string>
    <string name="permission4"><b>Write External Storage</b></string>

    <string name="overview">
        MPicture is a content platform, and personalization. People use MPicture to see others picture in the world, to make smartphones more personal using wallpapers. The MPicture platform enables people share pictures to people in the world.
    </string>
    <string name="open_source">Android\nPicasso\nOkHttp\nGoogle JSON\nGoogle Sheet Api
    </string>
    <string name="permission_1">
        Since MPicture are loading content from our servers you need to have an active network connection. This permission will allow us to see if you are connected or not.
    </string>
    <string name="permission_2">
        This permission allows MPicture internet access to load content from our servers.
    </string>
    <string name="permission_3">
        Allows you to set a wallpaper from within the app.
    </string>
    <string name="permission_4">
        Allows you to save the content you download from MPicture onto your phone.
    </string>
    <string name="feedback_title">
        Please send us your feedback
    </string>
    <string name="feedback_content">
        Do you have challenges with the app or suggestions for improvements? Press the button below to be taken to your preferred email client and let us know.
    </string>
    <string name="feedback_note">
        Note: Non personal information that can help us to debug will be include in the message.
    </string>

    <string name="author">Meeooooow</string>
    <string name="fanpage"><a href="https://fb.me/MEE0000W">Fanpage</a></string>
    <string name="messenger"><a href="https://m.me/MEE0000W">Messenger</a></string>
    <string name="download">Downloaded</string>
    <string name="title_activity_user_view">userView</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="action_settings">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
</resources>
