<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.meowt.wallpapers.DonateActivity"
    tools:showIn="@layout/app_bar_information">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/circle_item_menu">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/about_overview"
                android:textColor="@color/colorWhite"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:textColor="@color/colorWhite2"
                android:text="@string/overview" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:text="@string/about_open_source" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:textColor="@color/colorWhite2"
                android:text="@string/open_source" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:text="@string/about_permission" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:textColor="@color/colorWhite2"
                android:text="@string/permission1" />
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textSize="15sp"
                android:textColor="@color/colorWhite3"
                android:text="@string/permission_1" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:textColor="@color/colorWhite2"
                android:text="@string/permission2" />
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textSize="15sp"
                android:textColor="@color/colorWhite3"
                android:text="@string/permission_2" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:textColor="@color/colorWhite2"
                android:text="@string/permission3" />
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textSize="15sp"
                android:textColor="@color/colorWhite3"
                android:text="@string/permission_3" />
            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:textSize="20sp"
                android:textColor="@color/colorWhite2"
                android:text="@string/permission4" />
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="25dp"
                android:layout_marginLeft="25dp"
                android:textSize="15sp"
                android:textColor="@color/colorWhite3"
                android:text="@string/permission_4" />
            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:textSize="25sp"
                android:textColor="@color/colorWhite"
                android:text="@string/about_contact" />


            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:linksClickable="true"
                android:textSize="20sp"
                android:textColor="@color/colorWhite2"
                android:text="@string/fanpage"/>
            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="30dp"
                android:linksClickable="true"
                android:textSize="20sp"
                android:textColor="@color/colorWhite2"
                android:text="@string/messenger"/>

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>